--- a/LouisvilleHomes/appsettings.json
+++ b/LouisvilleHomes/appsettings.json
@@ -1,8 +1,48 @@
 {
+  "ConnectionStrings": {
+    "LouisvilleDemographics": "Server=(LocalDb)\\MSSQLLocalDB;Database=LouisvilleDemographics;Trusted_Connection=True;"
+  },
+
+  "AlexaSettings": {
+    // ApplicationId (Stored in external secrets)
+    "TimeoutSeconds": 150
+  },
+
+  "CacheSettings": {
+    "CacheTagsMinutes": 60.0,
+    "Type": 1 // 0 = None, 1 = In-Memory, 2 = Redis
+    //"Redis": "redis.example.com:6379"
+  },
+
+  "PVASettings": {
+    "Url": "https://jeffersonpva.ky.gov",
+    "SearchUrl": "/property-search/property-listings/?psfldAddress={0}&propertySearchFormButton=Search&searchType=StreetSearch"
+  },
+
+  "SheriffSettings": {
+    "Url": "http://www.jcsoky.org",
+    "SearchUrl": "/ptax_search_results_addr.asp"
+  },
+
+  "GoogleMapsSettings": {
+    // ApiKey (Stored in external secrets)
+    "Url": "https://maps.googleapis.com/maps/api/staticmap",
+    "MapType": "satellite", //roadmap, satellite, hybrid, terrain
+    "MarkerColor": "red", //black, brown, green, purple, yellow, blue, gray, orange, red, white
+    "MarkerSize": "mid", //tiny, mid, small
+    "SmallWidth": 720,
+    "SmallHeight": 480,
+    "SmallZoom": 21, //0 (the entire world) to 21+ (streets and individual buildings)
+    "LargeWidth": 1200,
+    "LargeHeight": 800,
+    "LargeZoom": 21 //0 (the entire world) to 21+ (streets and individual buildings)
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
+
   "AllowedHosts": "*"
 }
