--- a/TheVilleSkill/appsettings.json
+++ b/TheVilleSkill/appsettings.json
@@ -25,6 +25,11 @@
     "SearchUrl": "/ptax_search_results_addr.asp"
   },
 
+  "EventfulSettings": {
+    "BaseUrl": "http://api.eventful.com/json/"
+     // ApiKey (Stored in external secrets)
+  },
+
   "GoogleMapsSettings": {
     // ApiKey (Stored in external secrets)
     "Url": "https://maps.googleapis.com/maps/api/staticmap",
