Switched to local folder secrets file. Fixed issue in PvaAddressLookup.

--- a/.gitignore
+++ b/.gitignore
@@ -264,3 +264,4 @@ __pycache__/
 /TheVilleSkill/appsettings.Development.json
 /TheVilleSkill/appsettings.Production.json
 /TheVilleSkill/aws-beanstalk-tools-defaults.json
+/TheVilleSkill/appsettings.secrets.json
